# event-driven-campaign-runner

./: .env.example  .env.local.example  .gitignore  ARCHITECHTURE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: agents.instructions.md  events.instructions.md
Docs/: Complete_Flow_With_LLM.md  DEBUG_LOG.md  Example_staff_prompt.md  LOCAL_EXECUTION_PLAN.md
agents/: __init__.py
agents/campaign_planner/: __init__.py  agent.py  config.py  models.py  prompts.py  tools.py
agents/communication/: __init__.py  agent.py  config.py  llm_prompts.py  llm_tools.py  models.py  prompts.py  tools.py
agents/communication/templates/: clarification.txt  follow_up.txt  initial_outreach.txt  missing_document.txt  qualified_confirmation.txt  rejection.txt
agents/screening/: __init__.py  agent.py  config.py  llm_prompts.py  llm_tools.py  models.py  prompts.py  tools.py
agents/shared/: __init__.py  config.py  exceptions.py  state_machine.py
agents/shared/llm/: __init__.py  bedrock_client.py  config.py  requirements_normalizer.py  schemas.py
agents/shared/models/: __init__.py  dynamo.py  email_thread.py  events.py
agents/shared/tools/: __init__.py  dynamodb.py  email.py  email_thread.py  eventbridge.py  s3.py
campaign-ui/: package-lock.json  package.json
campaign-ui/app/: globals.css  layout.tsx  page.tsx
campaign-ui/app/campaigns/[id]/: page.tsx
campaign-ui/app/create/: page.tsx
campaign-ui/components/: CampaignChat.tsx  CampaignForm.tsx  CampaignList.tsx  ConversationModal.tsx  EventStream.tsx  ProviderCard.tsx  ProviderInbox.tsx  SimulateResponseModal.tsx
campaign-ui/hooks/: useCampaign.ts  useCampaignChat.ts  useEventStream.ts
contracts/: document_types.json  dynamodb_schema.json  email_config.json  events.json  requirements_schema.json  state_machine.json
lambda_deployment/campaign_planner/: .lambda.env.example  build_lambda.sh  lambda_handler.py  requirements-campaign_planner.txt
lambda_deployment/communication/: .lambda.env.example  build_lambda.sh  lambda_handler.py  requirements-communication.txt
lambda_deployment/process_inbound_email/: .lambda.env.example  build_lambda.sh  requirements-process_inbound_email.txt
lambda_deployment/screening/: .lambda.env.example  build_lambda.sh  lambda_handler.py  requirements-screening.txt
lambda_deployment/send_follow_ups/: .lambda.env.example  build_lambda.sh  requirements-send_follow_ups.txt
lambda_deployment/textract_completion/: .lambda.env.example  build_lambda.sh  requirements-textract_completion.txt
lambdas/: __init__.py
lambdas/process_inbound_email/: __init__.py  attachment_handler.py  email_parser.py  handler.py
lambdas/send_follow_ups/: __init__.py  handler.py  query_builder.py
lambdas/textract_completion/: __init__.py  document_processor.py  handler.py
scripts/: generate_test_data.py  local_api_server.py  local_event_router.py  local_textract_mock.py  run_demo.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  llm_responses.py
tests/fixtures/demo/: __init__.py  mock_providers.json  new_campaign_event.json
tests/fixtures/demo/documents/: insurance_documents.json
tests/fixtures/demo/provider_responses/: prov-atl-001_response.json  prov-atl-002_response.json  prov-atl-003_response.json  prov-atl-004_response.json  prov-atl-005_response.json  prov-chi-001_response.json  prov-chi-002_response.json  prov-chi-003_response.json  prov-chi-004_response.json  prov-chi-005_response.json  prov-mil-001_response.json  prov-mil-002_response.json  prov-mil-003_response.json  prov-mil-004_response.json  prov-mil-005_response.json
tests/integration/: README.md  __init__.py  conftest.py  test_campaign_flow_e2e.py  test_llm_flow.py  test_shared_tools_integration.py
tests/mocks/: __init__.py  mock_bedrock.py
tests/unit/: __init__.py  test_bedrock_client.py  test_campaign_planner.py  test_communication.py  test_communication_llm.py  test_email_thread.py  test_models.py  test_process_inbound_email_handler.py  test_screening.py  test_screening_llm.py  test_send_follow_ups_handler.py  test_shared_tools.py  test_state_machine.py  test_textract_completion_handler.py
tests/utils/: __init__.py  event_generator.py
