[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recruitment-automation"
version = "0.1.0"
description = "Event-driven, agent-based recruitment automation system"
readme = "ARCHITECHTURE.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Fieldnation", email = "engineering@fieldnation.com"}
]
keywords = ["ai", "agents", "automation", "recruitment", "aws", "bedrock"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # AWS SDK
    "boto3>=1.42.43",
    "botocore>=1.42.24",
    
    # Strands AI framework
    "strands-agents>=1.25.0",
    "strands-agents-tools>=0.2.19",
   
    # Data validation
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    
    # Email parsing
    "email-validator>=2.3.0",
    
    # Template rendering
    "Jinja2>=3.1.6",
    
    # Environment management
    "python-dotenv>=1.2.1",
    
    # Structured logging
    "structlog>=25.5.0",
    "python-json-logger>=4.0.0",
    
    # HTTP client (for webhooks, etc.)
    "httpx>=0.28.1",
    
    # JSON Schema validation
    "jsonschema>=4.26.0",
    
    # Date/time handling
    "python-dateutil>=2.9.0.post0",
    
    # Retry logic
    "tenacity>=9.1.3",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "moto[dynamodb,s3,ses,events]>=5.0.0",
    "freezegun>=1.2.0",
    "faker>=19.12.0",
    # Code quality
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "bedrock-agentcore>=1.2.0",
    "bedrock-agentcore-starter-toolkit>=0.2.10",
    # Local development server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.urls]
Repository = "https://github.com/yourorg/recruitment-automation"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "lambdas*", "contracts*", "scripts*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=agents",
    "--cov=lambdas",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require AWS services)",
    "slow: Slow-running tests",
    "dynamodb: Tests requiring DynamoDB",
    "eventbridge: Tests requiring EventBridge",
    "ses: Tests requiring SES",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["agents", "lambdas"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["S101"]       # assert usage

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "moto.*",
    "strands.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert usage

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
